# virtual-protect-inspector

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: vulnserver_trun_exploit.py
vp_inspector/: __init__.py  cli.py  config.py  exploit_generator.py  gadget_finder.py  rop_builder.py
